<resources>
    <string name="app_name">labexam02</string>
    <string name="welcome">Welcome to Gift Ginie!</string>
    <string name="welcome2">Your ultimate Gift Companion.</string>
    <string name="GetStarted">Get Started</string>
    <string name="LogIn">Log In</string>
    <string name="giftForwho">Tell us about the person you\'re shopping for, and we\'ll provide personalized gift suggestions based on their interests and preferences.</string>
    <string name="question01">Who is this person?</string>
    <string name="nonbinary">Non-Binary</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="question02">What\'s their age?</string>
    <string name="question03">what is the occasion?</string>
    <string name="Birthday">Birthday</string>
    <string name="anniversary">Anniversary</string>
    <string name="Wedding">Wedding</string>
    <string name="NewYear">New Year</string>
    <string name="BabyShower">BabyShower</string>
    <string name="Date">Date</string>
    <string name="christmas">Christmas</string>
    <string name="age">22</string>
    <string name="question04">What is your budget?</string>
    <string name="range1">Rs 0-500</string>
    <string name="range2">Rs 500-1500</string>
    <string name="range3">Rs 1500-3000</string>
    <string name="range4">Rs 3000-5000</string>
    <string name="range5">Rs 5000-10000</string>
    <string name="range6">Rs 10000-20000</string>
    <string name="startsearch">Start Search</string>
    <string name="Login">"Let's Log In "</string>
    <string name="usernamehint">Username</string>
    <string name="password">Password</string>
    <string name="finallogin">Log In</string>
    <string name="ifnoaccount">If you do not have an account, Sign Up.</string>
    <string name="signuppage">Sign Up</string>
    <string name="GoBack">Go Back</string>
    <string name="Discover">Discover</string>
    <string name="howggworks">How Gift Ginie works,</string>
    <string name="feature01">Personalized \nRecommendations</string>
    <string name="feature1explained">Discover tailored gift suggestions based on the recipient\'s interests and preferences</string>
    <string name="feature2">Wishlist Creation</string>
    <string name="feature2explained">Create and manage a wishlist of your favorite gift ideas, making it easy to keep track of what you love.</string>
    <string name="feature3">Save Special Dates and Preferences</string>
    <string name="feature3explained">Never miss an important occasion! Save special dates and personalize your gift recommendations based on recipients\' preferences</string>
    <string name="signuptogetstarted">Sign up to get started</string>
    <string name="goback2">Go Back</string>
    <string name="seeresult">See Result</string>
    <string name="ageanswer">21</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="sug1">1.Smart Watch</string>
    <string name="sug1discription">A stylish smartwatch combines fashion with technology, allowing her to stay connected, track fitness goals, and receive notifications discreetly.</string>
    <string name="sug2">2. Wireless Earbuds</string>
    <string name="sug2dis">Wireless Earbuds\nHigh-quality wireless earbuds offer both functionality and style, providing an immersive audio experience while complementing her fashion sense.</string>
    <string name="homepage">Home</string>
    <string name="magicresults">Magic Results;</string>
    <string name="createyourownwishlist">Create your own wishlist.</string>
    <string name="giftbox">Gift Box</string>
    <string name="explore.more">Explore More</string>
    <string name="savedatetxt">Save Key dates and preferences of your loved ones.</string>
    <string name="savebutton">Save Person</string>
    <string name="experiencemagic">Experience the magic of GG for your need,</string>
    <string name="magic">GG Magic</string>
    <string name="search">Search</string>
    <string name="fav">Fav</string>
    <string name="account">Logout</string>
    <string name="letssignup">Let\'s Sign Up</string>
    <string name="email">email@gmail.com</string>
    <string name="Password">password</string>
    <string name="wishlist">My Wishlist,</string>
    <string name="gift1">Female Gift Box</string>
    <string name="gift2">Male Gift Box</string>
    <string name="exolore">Explore more gifts</string>
</resources>